jilles      2006/11/19 15:44:42 UTC	(20061119-7225)
  Log:
  Add operclass::needoper, denies giving any privilege
  to IRC users matching this operclass who are not IRCops.
  

  Changes:	Modified:
  +7 -0		trunk/dist/example.conf (File Modified) 
  +4 -3		trunk/doc/PRIVILEGES (File Modified) 
  +3 -0		trunk/include/privs.h (File Modified) 
  +2 -1		trunk/modules/operserv/soper.c (File Modified) 
  +7 -1		trunk/src/conf.c (File Modified) 
  +2 -0		trunk/src/privs.c (File Modified) 
  +11 -3	trunk/src/ptasks.c (File Modified) 


jilles      2006/11/18 16:43:46 UTC	(20061118-7215)
  Log:
  Add chanserv why help file.
  

  Changes:	Modified:
  +9 -0		trunk/help/cservice/why (File Added) 
  +5 -0		trunk/modules/chanserv/why.c (File Modified) 


jilles      2006/11/18 14:21:58 UTC	(20061118-7213)
  Log:
  chanserv::trigger setting:
  - if not given, use the default, even if another value was previously used
  - give an error message if more than one character is given
  

  Changes:	Modified:
  +2 -5		trunk/src/conf.c (File Modified) 


jilles      2006/11/18 14:19:13 UTC	(20061118-7211)
  Log:
  Show /cs set fantasy status in /cs info.
  

  Changes:	Modified:
  +3 -0		trunk/modules/chanserv/info.c (File Modified) 


jilles      2006/11/18 14:16:40 UTC	(20061118-7209)
  Log:
  Add help file for /cs set guard.
  

  Changes:	Modified:
  +9 -0		trunk/help/cservice/set_guard (File Added) 


jilles      2006/11/18 14:03:53 UTC	(20061118-7207)
  Log:
  Allow other values for chanserv::trigger than '!', '@' or '.',
  by removing the check for those in command processing.
  That check is no longer needed as chanserv now checks the
  first character before engaging in lengthy processing.
  

  Changes:	Modified:
  +0 -6		trunk/src/ptasks.c (File Modified) 


jilles      2006/11/18 14:02:11 UTC	(20061118-7205)
  Log:
  Mention fantasy commands in /cs help.
  

  Changes:	Modified:
  +7 -0		trunk/modules/chanserv/help.c (File Modified) 

