@@ -5,7 +5,7 @@
  *
  * This file contains protocol support for bahamut-based ircd.
  *
- * $Id: unreal.c 6861 2006-10-22 14:08:20Z jilles $
+ * $Id: unreal.c 7229 2006-11-19 17:14:33Z jilles $
  */
 
 #include "atheme.h"
@@ -13,7 +13,7 @@
 #include "pmodule.h"
 #include "protocol/unreal.h"
 
-DECLARE_MODULE_V1("protocol/unreal", TRUE, _modinit, NULL, "$Id: unreal.c 6861 2006-10-22 14:08:20Z jilles $", "Atheme Development Group <http://www.atheme.org>");
+DECLARE_MODULE_V1("protocol/unreal", TRUE, _modinit, NULL, "$Id: unreal.c 7229 2006-11-19 17:14:33Z jilles $", "Atheme Development Group <http://www.atheme.org>");
 
 /* *INDENT-OFF* */
 
@@ -498,7 +498,7 @@ static void m_sjoin(sourceinfo_t *si, int parc, char *parv[])
 		if (ts < c->ts)
 		{
 			remove_our_modes(c);
-			slog(LG_INFO, "m_sjoin(): TS changed for %s (%ld -> %ld)", c->name, c->ts, ts);
+			slog(LG_DEBUG, "m_sjoin(): TS changed for %s (%ld -> %ld)", c->name, c->ts, ts);
 			c->ts = ts;
 			hook_call_event("channel_tschange", c);
 		}
@@ -531,7 +531,7 @@ static void m_sjoin(sourceinfo_t *si, int parc, char *parv[])
 		if (ts < c->ts)
 		{
 			remove_our_modes(c);
-			slog(LG_INFO, "m_sjoin(): TS changed for %s (%ld -> %ld)", c->name, c->ts, ts);
+			slog(LG_DEBUG, "m_sjoin(): TS changed for %s (%ld -> %ld)", c->name, c->ts, ts);
 			c->ts = ts;
 			hook_call_event("channel_tschange", c);
 		}
@@ -563,7 +563,7 @@ static void m_sjoin(sourceinfo_t *si, int parc, char *parv[])
 		if (ts < c->ts)
 		{
 			remove_our_modes(c);
-			slog(LG_INFO, "m_sjoin(): TS changed for %s (%ld -> %ld)", c->name, c->ts, ts);
+			slog(LG_DEBUG, "m_sjoin(): TS changed for %s (%ld -> %ld)", c->name, c->ts, ts);
 			c->ts = ts;
 			/* XXX lost modes! -- XXX - pardon? why do we worry about this? TS reset requires modes reset.. */
 			hook_call_event("channel_tschange", c);
